<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Geek_soccer</string>
    <string name="action_team">Team</string>
    
    <string name="update_app_title">Please update app!</string>
    <string name="update_app_question">This version app is old version. \n Do you want to update app to last version?</string>
    
    <string name="signout_app">Signing Out...</string>
    
    <string name="restarting_app">Restarting App...</string>
    <string name="no_permission">You do not permission in change team.</string>
    
    <string name="sign_in_gmail">Sign In with Gmail</string>
    
    <string name="net_wifi">Wifi enabled</string>
    <string name="net_mobile">3G enabled</string>
    
    <string name="select_mode_question">This is select download image mode buttom  \n\n Please select mode where want enable.</string>
    <string name="button_confirm_save_mode">Save Mode</string>
   	<string name="button_confirm_normal_mode">Normal Mode</string>
   	<string name="select_mode_title">Select Mode</string>
    
    <string name="button_confirm_no">No</string>
    <string name="save_mode_check_ask">Don\'t ask me.</string>
    
    <string name="no_install_youtube">You don\'t install Youtube application.</string>
    <string name="no_install_browser">You don\'t install Default Browser application.</string>
    
    <string name="show_photo">View</string>
    <string name="save_mode_title">Save Mode</string>
    <string name="save_mode_question">Now, you use mobile network.\n We are recommend to use save mode.\n for reduce download image\n\n Do you want to enable save mode?</string>
    
    <string name="video_title_error">Sorry, this video can not be played.</string>
    <string name="video_message_error">There are a problem while playing.</string>
    <string name="ok">OK</string>
    <string name="confirm_save">Save</string>
    
    <string name="warn_member_name1">Please Update Name</string>
    <string name="warn_member_name2">Please Use Character Name More Than 2 OR Change Image</string>
    
    <string name="title_bar_news">NEWS</string>
    <string name="title_bar_live_score">LIVE SCORE</string>
    <string name="title_bar_chat">CHAT ROOM</string>
    <string name="title_bar_score_broads">SCORE BOARD</string>
    <string name="title_bar_hilight">HILIGHT</string>
    <string name="title_bar_profile">Profile</string>
    <string name="title_bar_setting">Setting</string>
    <string name="title_bar_help">Help</string>
    <string name="title_bar_match_detail">MATCH DETAILS</string>
    <string name="title_bar_sticker_shop">STICKER SHOP</string>
    <string name="title_bar_config">CONFIGURATION</string>
    <string name="title_bar_fixtures">FIXTURES</string>
    <string name="title_bar_selecteam">SELECT TEAM</string>
    
    <string name="table_head_seq">#</string>
    <string name="table_head_team">Team</string>
    <string name="table_head_match">P</string>
    <string name="table_head_win">W</string>
    <string name="table_head_draw">D</string>
    <string name="table_head_lose">L</string>
    <string name="table_head_get_goal">F</string>
    <string name="table_head_lose_goal">A</string>
    <string name="table_head_result_goal">GD</string>
    <string name="table_head_mark">Pts</string>
    
    <string name="table_ucl">UEFA Champions League (final round)</string>
    <string name="table_acl">AFC Champions League</string>
    <string name="table_ucl_match">UEFA Champions League (Qualifier round)</string>
    <string name="table_upl">UEFA Europa League</string>
    <string name="table_bundes_match">Play-Off Find Fail Division</string>
    <string name="table_fail">Fail Division</string>
    <string name="table_par">Nothing</string>
    
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
    <string name="pull_to_refresh_tap_join_label">Tap to join chat room...</string>
    
    <string name="HILIGHT_TYPE_PREMIER_LEAGUE">พรีเมียร์ลีก</string>
    <string name="HILIGHT_TYPE_LALIGA">ลาลีกา</string>
    <string name="HILIGHT_TYPE_CALCAIO_SERIE_A">กัลโช่ เซเรีย อา</string>
    <string name="HILIGHT_TYPE_LEAGUE_DE_LEAGUE1">ลีกเอิง</string>
    <string name="HILIGHT_TYPE_BUNDESLIGA">บุนเดสลีกา</string>
    <string name="HILIGHT_TYPE_UCL">ยูฟ่า แชมป์เปี้ยนส์ ลีก</string>
    <string name="HILIGHT_TYPE_UPL">ยูฟ่า ยูโรป้า ลีก</string>
    <string name="HILIGHT_TYPE_CHAMPIAN_CHIP">แชมเปี้ยนชิพ อังกฤษ</string>
    <string name="HILIGHT_TYPE_CAPITAL_ONE_CUP">แคปิตอล วัน คัพ</string>
    
    <string name="warning_internet">Please check your internet connection or try again later</string> 
    
    <string name="global_news">Global News</string> 
    <string name="team_news">Team News</string>
    
    <string name="profile_favorit_team">Favorite Team : </string>
    <string name="profile_gender">Gender : </string>
    <string name="profile_email">Email : </string>
    
    <string name="profile_username">Username</string>
    
    <string name="button_confirm_ok">OK</string>
    <string name="rate_app_title">Rate App</string>
    <string name="rate_app_question">Do you want to rate app \n for support developer?</string>
    
    <string name="share_app_title">Share App</string>
    <string name="share_app_question">Do you want to share app \n for friend\'s known this app?</string>
    <string name="share_by">Share By...</string>
    
    <string name="close_app_title">Close App</string>
    <string name="close_app_question">Do you want to close this app?</string>
    
    <string name="logout_app_title">Logout App</string>
    <string name="logout_app_question">Do you want to logout this app?</string>
    
    <string name="change_lang_title">Change Language</string>
    <string name="change_lang_question">Change Language need restart app. \n\n Do you want to change language \n and restart this app?</string>
    
    <string name="title_select_team">Select Team Accept</string>
    <string name="question_select_team">Next time you can\'t change favorite team. \n\n Do you want to selected this team?</string>
    <string name="question_select_team_other">Next time if version of app update,\n you can select favorite team again. \n\n Don\'t you want to select exist team list?</string>
    
    <string name="profile_save_success">Data saved successfully.</string>
    <string name="update_profile">Updating Profile...</string>
    
    <string name="str_today_livescore">TODAY</string>
    <string name="str_yesterday_livescore">YESTERDAY</string>
    <string name="str_tomorrow_livescore">TOMORROW</string>
    
   	<string name="chat_global">Global Room</string>
    <string name="chat_arsenal">Arsenal Room</string>
    <string name="chat_chelsea">Chelsea Room</string>
    <string name="chat_liverpool">liverpool Room</string>
    <string name="chat_manu">ManU Room</string>
    
    <string name="sign_logout">This device logouted.</string>
    <string name="sign_signing_in">Signing in...</string>
    <string name="sign_warning">Internet problem or this member using on any device</string>
    <string name="sign_signing_up">Signing up...</string>
    <string name="sign_google_no_sync">No Google Account Sync!</string>
    
    <string name="dailog_select_team">Select View Team</string>
    <string name="dailog_favorite_team">Select Favorite Team</string>
    <string name="no_favorite_team">No Favorite Team</string>
    
    <string name="profile_pick_image">Please pick image type png, jpg or jpeg only</string>
    <string name="profile_pick_less_image">Please Pick Image Less Size.</string>
    
    <string name="put_message"> Put Message</string>
    
    <string name="rule_title"> Application Rule</string>
    <string name="rule_detal">1... \n 2... \n 3...</string>
    
    <string name="copy_str">COPY TEXT</string>
    <string name="report_str">BAN USER REPORT</string>
    <string name="report">Ban report</string>
    <string name="fail_report">fail</string>
    <string name="success_report">success</string>
    <string name="used_report">You used to report</string>
    <string name="chat_ban">Your interactive suspended</string>
    <string name="con_lost">Connection lost</string>
    <string name="no_match">No have match today</string>
    <string name="charge">Charge</string>
    <string name="charge_cancel">Cancel</string>
    <string name="charge_ok">Charge</string>
    <string name="stk_detail">Sticker Detail</string>
    <string name="alert_match_nearby">The game will begin in </string>
    <string name="alert_match_nearby_minute"> minutes.</string>
    <string name="add_fave_team">Add to Match Following</string>
    <string name="del_fave_team">Delete from Match Following</string>
    <string name="user_count">Online user</string>
    
    <string name="fixtures_nextmatch">Next Match</string>
    <string name="fixtures_season">Season</string>
    
    <string-array name="lang_list">
        <item>English</item>
        <item>Thai</item>
    </string-array>
    
    <string-array name="titles_tabs_table_page">
        <item>Premier League</item>
        <item>Bundesliga</item>
        <item>Laliga</item>
        <item>Calcio Seria A</item>
        <item>Ligue 1</item>
        <item>Thai Premier League</item>
    </string-array>
    
    <string-array name="titles_tabs_hilight_page">
        <item>New</item>
        <item>Premier League</item>
        <item>Bundesliga</item>
        <item>Laliga</item>
        <item>Calcio Seria A</item>
        <item>Ligue 1</item>
        <item>UEFA Champions League</item>
        <item>UEFA Europa League</item>
        <item>Championship</item>
        <item>Capital One Cup</item>
    </string-array>
</resources>
