<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/main_action_bar"
        style="?backgroundTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:drawablePadding="5dp"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:text="@string/charge" />

        <ImageView
            android:id="@+id/close_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/bg_press"
            android:padding="10dp"
            android:src="@drawable/ic_action_remove" />
    </RelativeLayout>
    
    <RadioGroup
        android:id="@+id/buyGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
                android:id="@+id/buyCoins1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="100"
                android:drawableRight="@drawable/coin" />

        <RadioButton
                android:id="@+id/buyCoins2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="200"
                android:drawableRight="@drawable/coin" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/Cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_download"
            android:text="@string/charge_cancel" />

        <Button
            android:id="@+id/Buy_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_download"
            android:text="@string/charge_ok" />
    </LinearLayout>

</LinearLayout>