<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="170dp"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="170dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:alpha="0.7"
        android:background="@color/black"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/News"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_press"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/NewsIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/news_h" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/title_bar_news"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/LiveScore"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_press"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/LiveScoreIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/livescore_h" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/title_bar_live_score"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/Chat"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_press"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/ChatIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/chat_h" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/title_bar_chat"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/ScoreBoard"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_press"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/ScoreBoardIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/board_h" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/title_bar_score_broads"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/Hilight"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_press"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/HilightIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/hilight_icon_select" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/title_bar_hilight"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/gray" />
            
            <LinearLayout
                android:id="@+id/Fixtures"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_press"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/FixturesIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/fixtures_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/title_bar_fixtures"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:id="@+id/Fixtures_Line"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="20dp"
                android:textSize="16sp"
                android:text="@string/title_bar_config"
                android:textColor="@color/graylittle"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/Profile"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_press"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/ProfileIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_action_user" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/title_bar_profile"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/Rate"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_press"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/RateIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:padding="3dp"
                    android:src="@drawable/star_white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/rate_app_title"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/Share"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_press"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/ShareIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_action_share" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/share_app_title"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/help"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_press"
                android:gravity="center"
                android:visibility="gone" >

                <ImageView
                    android:id="@+id/helpIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_action_help" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/title_bar_help"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/gray"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/Setting"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_press"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/SettingIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_action_settings" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/title_bar_setting"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/logINOUT"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_press"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/logINOUTIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:src="@drawable/log_out" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/logout_app_title"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/gray" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>